--- a/Index.mkd
+++ b/Index.mkd
@@ -1,37 +1,101 @@
 Simplify CSS Development with Sass & Compass
 ============================================
 
-Alex Lemanski (@bitfyre)
+[Alex Lemanski](http://www.bitfyre.net) ([@bitfyre](http://twitter.com/bitfyre.))
 
 Front-End Developer, Trilogy Interactive
+
+And I…
+
+Was a Sass Hater
+----------------
+
+* Until 2 years ago
+* Nov 2009
+* The Change Log episode 0.0.1
+* Nathan Weizenbaum & Chris Eppstein
 
 The Basics
 ----------
 
 ### Variables
 
-  
+    $font-color:        #3B3330;
+    $sans-family:       Helvetica, FreeSans, "Nimbus Sans L", Arial, sans-serif;
+    $fancy-sans-family: "dejarip-1","dejarip-2", $sans-family;
+    
+    h1 {
+      font-family: $fancy-sans-family;
+      color: $font-color;
+    }
 
 ### Nesting selectors
 
+
+    .nav {
+      font-family: $font-family;
+      ul, ol {
+        list-style: none;
+        list-style-image: none;
+      }
+    }
+
+#### Parent References
+
+    .nav {
+      …
+      a {
+        &:hover, &:focus {
+          color: $link-hover-color;
+        }
+      }
+    }
+
 ### Nesting statements
 
+    .nav {
+      …
+      a {
+        background-color: $nav-bg-color;
+        &:hover, &:focus {
+          color: $link-hover-color;
+          background: {
+            color: $nav-bg-hover;
+            image: url("nav-bg");
+            repeat: no-repeat;
+          }
+        }
+      }
+    }
+
 ### Comments
+
+    /*  Standard CSS style Comment
+        It will show up in the CSS */
+
+    // Sass comment.
+    // This will not show up in the CSS.
 
 Tools
 -----
 
 ### A Few Desktop GUI's
 
-  * [Web Workbench](http://www.mindscapehq.com/products/web-workbench "Web Workbench - Sass, Less and CoffeeScript in Visual Studio")
-  * [Compass.app](http://compass.handlino.com/ "Compass.app: compile Sass/Compass easily without resorting to command line interface")
-  * [CodeKit](http://incident57.com/codekit/ "CodeKit — THE Mac App For Web Developers")
-  * [Scout](http://mhs.github.com/scout-app/ "Scout - Compass and Sass without all the hassle")
-  * [LiveReload2](http://livereload.com/ "LiveReload")
+  * [Web Workbench](http://www.mindscapehq.com/products/web-workbench "Web Workbench - Sass, Less and CoffeeScript in Visual Studio") (Visual Studio Plugin)
+  * [Compass.app](http://compass.handlino.com/ "Compass.app: compile Sass/Compass easily without resorting to command line interface") (Mac | Windows | Linux)
+  * [CodeKit](http://incident57.com/codekit/ "CodeKit — THE Mac App For Web Developers") (Mac)
+  * [Scout](http://mhs.github.com/scout-app/ "Scout - Compass and Sass without all the hassle") (Mac | Windows)
+  * [LiveReload2](http://livereload.com/ "LiveReload") (Mac | Windows in early alpha )
 
-- Commandline
-  - Sass itself
-  - sass
+### Commandline
+
+- Sass itself
+- sass
+
+### Debugging Tools
+
+* Generated Line Comments
+* [FireSass for Firebug](https://addons.mozilla.org/en-US/firefox/addon/firesass-for-firebug/)
 
 It's the Coder Not the tool
 ---------------------------
