add Additional Resources and license

--- a/Index.mkd
+++ b/Index.mkd
@@ -166,13 +166,19 @@ What is Compass?
 
 - Helpers
 - Mixins
-- Frameworks and Framework Building Tools
+- Framework for Building Frameworks
 - Plugin Architecture
 
 Cut the Cruft
 -------------
 
-- CSS3 Helpers
+### CSS3 Helpers
 
-Resources
----------
+Additional Resources
+--------------------
+
+* [Sass Website](http://sass-lang.com/ "Sass - Syntactically Awesome Stylesheets")
+* [The Sass Way](http://thesassway.com/ "The Sass Way")
+* 
+
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
