--- a/Index.mkd
+++ b/Index.mkd
@@ -132,7 +132,7 @@ Two Syntaxes?? Are you nuts?!
           color: $link-hover-color
           background:
             color: $nav-bg-hover
-            image: url("nav-bg")
+            image: url("nav-bg.png")
             repeat: no-repeat
 
 A Bit More Complex
@@ -145,10 +145,15 @@ A Bit More Complex
 
 ### Function to generate Kuler like color pallets
 
-Make the Ugly stick and Pretty stick
-------------------------------------
+Hit it with the Ugly stick and the Pretty stick
+-----------------------------------------------
 
-- Output Style
+### Output styles
+
+:nested
+:expanded
+:compact
+:compressed
 
 CMS Integration
 ---------------
