--- a/Index.mkd
+++ b/Index.mkd
@@ -324,12 +324,12 @@ Cut the Cruft
 
 ### CSS3 Helpers
 
-
 Additional Resources
 --------------------
 
 * [Sass Website](http://sass-lang.com/ "Sass - Syntactically Awesome Stylesheets")
 * [The Sass Way](http://thesassway.com/ "The Sass Way")
-* 
+* [The Changelog, Episode 0.0.1 - Haml Sass and Compass](http://thechangelog.com/post/254788034/episode-0-0-1-haml-sass-and-compass "Episode 0.0.1 - Haml Sass and Compass - The Changelog - Open Source moves fast. Keep up.")
+* [Using SASS With the 1KB Grid System](http://heygrady.com/blog/2011/02/17/using-sass-with-the-1kb-grid-system/ "Using SASS With the 1KB Grid System - Heygrady")
 
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
