--- a/Index.mkd
+++ b/Index.mkd
@@ -199,6 +199,12 @@ Start files to be imported with and underscore e.g. _nav.scss
       @else {
         text-shadow: $color $hoff $voff $blur; } }
 
+Some other Control Directives available
+
+* `@for`
+* `@each`
+* `@while`
+
 ### Functions
 
     $$base-font-size: 12 !default;
