--- a/Index.mkd
+++ b/Index.mkd
@@ -330,7 +330,7 @@ CMS Integration
 What is Compass?
 ----------------
 
-- Helpers
+- Helpers Functions
 - Mixins
 - Framework for Building Frameworks
 - Plugin Architecture
@@ -351,7 +351,21 @@ Additional Resources
 
 * [Sass Website](http://sass-lang.com/ "Sass - Syntactically Awesome Stylesheets")
 * [The Sass Way](http://thesassway.com/ "The Sass Way")
+* [Compass](http://compass-style.org/ "Compass Home | Compass Documentation")
+* [Compass Plugins](https://github.com/chriseppstein/compass/wiki/Compass-Plugins)
 * [The Changelog, Episode 0.0.1 - Haml Sass and Compass](http://thechangelog.com/post/254788034/episode-0-0-1-haml-sass-and-compass "Episode 0.0.1 - Haml Sass and Compass - The Changelog - Open Source moves fast. Keep up.")
 * [Using SASS With the 1KB Grid System](http://heygrady.com/blog/2011/02/17/using-sass-with-the-1kb-grid-system/ "Using SASS With the 1KB Grid System - Heygrady")
+* #sass irc on Freenode
+* #compass irc on Freenode
+* #teamSass hashtag on Twitter
+
+Questions?
+----------
+
+Thankyou!
+---------
+
+Alex Lemanski  
+[@bitfyre](https://twitter.com/bitfyre) | [email](mailto:alex.lemanski@bitfyre.net)
 
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
