--- a/Index.mkd
+++ b/Index.mkd
@@ -358,6 +358,7 @@ Additional Resources
 * [Sass Website](http://sass-lang.com/ "Sass - Syntactically Awesome Stylesheets")
 * [The Sass Way](http://thesassway.com/ "The Sass Way")
 * [Compass](http://compass-style.org/ "Compass Home | Compass Documentation")
+* [Compass Install Guide](http://compass-style.org/install/ "Install the Compass Stylesheet Authoring Framework | Compass Documentation")
 * [Compass Plugins](https://github.com/chriseppstein/compass/wiki/Compass-Plugins)
 * [The Changelog, Episode 0.0.1 - Haml Sass and Compass](http://thechangelog.com/post/254788034/episode-0-0-1-haml-sass-and-compass "Episode 0.0.1 - Haml Sass and Compass - The Changelog - Open Source moves fast. Keep up.")
 * [Using SASS With the 1KB Grid System](http://heygrady.com/blog/2011/02/17/using-sass-with-the-1kb-grid-system/ "Using SASS With the 1KB Grid System - Heygrady")
